<resources>
    <string name="app_name">Study Progress App</string>
    <string name="app_title">Study Progress App</string>
    <string name="course_subject">subject name</string>
    <string name="course_ects">3</string>
    <string name="course_grade">0</string>
    <string name="menu_action_overview">Alle vakken</string>
    <string name="menu_action_progressie_ects">Progressie</string>
    <string name="btn_reset_courses">Reset courses</string>
    <string name="subject_name">Naam</string>
    <string name="subject_ects">ECTS</string>
    <string name="subject_grade">Cijfer</string>
    <string name="subject_period">Periode</string>
    <string name="subject_notes">Notities</string>
    <string name="subject_year">Jaar</string>
    <string name="btn_save_course">Opslaan</string>
    <string name="null_notes">Nog geen notities...</string>
    <string name="subject_details_required">Verplicht</string>
    <string name="remaining_ects">Nog te behalen ects:</string>
    <string name="empty_view">...</string>
    <string name="menu_action_overview_2014">2014</string>
    <string name="courses_menu">Vakken overzicht</string>
    <string name="searchView_placeholder">Zoek op basis van studiejaar</string>
    <string name="menu_action_reset_courses">Reset vakken</string>
    <string name="subject_required">verplicht</string>
    <string name="hint_subject_name">Vak naam</string>
    <string name="hint_ects">Aantal ects</string>
    <string name="hint_grade">Cijfer</string>
    <string name="hint_study_year">Studiejaar</string>
    <string name="hint_period">Periode</string>
    <string name="hint_required">Verplicht</string>
    <string name="hint_notes">Aantekeningen</string>
    <string name="grades_overview">Cijfers overzicht</string>
    <string name="ects_per_year">ECTS per jaar</string>
    <string name="btn_delete_course">Verwijder</string>
    <string name="add_new_course">Nieuw vak toevoegen</string>
    <string name="btn_add_course">Toevoegen</string>
</resources>
